--- a/gestione_dispositivi/env.properties
+++ b/gestione_dispositivi/env.properties
@@ -1,7 +1,8 @@
-DATABASE_NAME=u5w2d4
+DATABASE_NAME=u5w2d5esame
 DB_PASSWORD=1234
 DB_USERNAME=postgres
 
+PORT=3001
 
 JWT_SECRET=mZq3t6w9zxCxFxJxNcRfUjXn2r5u7xxA123sada123asdxzc
 JWT_EXPIRATION=7
