--- a/gestione_dispositivi/src/main/resources/application.properties
+++ b/gestione_dispositivi/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.datasource.username=${DB_USERNAME}
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
 
 #debug=false
 logging.level.org.springframework=info
